test/cherry/Language/const_tensor_call_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn consume(values: Float32[2]): UInt64 {
  values[0] = 3.0;
  0
}

fn main(): UInt64 {
  const weights: Float32[2] = [1.0, 2.0];
  consume(weights)
}

# CHECK: error: cannot bind const tensor to mutable variable
